--- a/views/news.hbs
+++ b/views/news.hbs
@@ -1,7 +1,7 @@
-<div>
-
-    <div class="row nav nav-block">
-
+<div class="nav-block">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <span class="navbar-brand" href="#"><img src="/images/news.png" width="30" height="30" alt=""></span>
+    <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" href="?category=protest">Protest</a>
         </li>
@@ -11,17 +11,28 @@
         <li class="nav-item">
             <a class="nav-link" href="?category=assault">Assault</a>
         </li>
+    </ul>
+</div>
 
-    </div>
-
-    <div class="row news-block">
-        <ul class="list-group">
+<div class="table-responsive news-block">
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
+            <tr>
+                <th>URL</th>
+                <th>Actor One</th>
+                <th>Actor Two</th>
+                <th>Sentiment</th>
+            </tr>
+        </thead>
+        <tbody>
             {{#each stories}}
-                    <a class="news-link" href="{{this.sourceurl}}" target="blank">
-                        {{this.sourceurl}}<span class="badge badge-primary badge-pill">{{this.numarticles}}</span>
-                    </a>
+            <tr>
+                <td><a href="{{this.source}}" target="blank">{{this.short}}</a></td>
+                <td>{{this.name_one}}</td>
+                <td>{{this.name_two}}</td>
+                <td>{{this.avgtone}}</td>
+            </tr>
             {{/each}}
-        </ul>
-    </div>
-
+        </tbody>
+    </table>
 </div>
