--- a/views/news.hbs
+++ b/views/news.hbs
@@ -1,3 +1,38 @@
+<div class="nav-block">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <span class="navbar-brand" href="#"><img src="/images/news.png" width="30" height="30" alt=""></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="?category=protest">Protest</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="?category=fight">Fight</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="?category=assault">Assault</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="?category=comment">Comment</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="?category=cooperate">Cooperate</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="?category=consult">Consult</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="?category=aid">Aid</a>
+            </li>
+        </ul>
+    </div>
+    <form class="form-inline my-2 my-lg-0" onsubmit="country_runner()">
+    <input class="form-control mr-sm-2" type="search" placeholder="Country Search . . ." aria-label="Search">
+    </form>
+</div>
 <div class="row">
     <div class="col-4"><div id="map"></div></div>
     <div class="col-8 table-responsive news-block" id="info">
