--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,54 @@
     min-height: 100vh;
 }
 
-.row {
-    padding-top: 80px
+.main-row {
+
+    margin-top: 20px;
+
+}
+
+th {
+    background-color: #3b4044 !important;
+}
+
+.btn {
+    border-radius: 0 !important;
+}
+
+.input-group-text {
+    border-radius: 0 !important;
+}
+
+.form-control {
+    border-radius: 0 !important;
+}
+
+#top-ten {
+    overflow: auto;
+    max-height: 600px;
+
+}
+
+html {
+    overflow: scroll;
+    overflow-y: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 0px; 
+}
+
+/* Paste this css to your style sheet file or under head tag */
+/* This only works with JavaScript, 
+if it's not present, don't show loader */
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+    z-index: 9999;
+	background: url(/images/loader.gif) center no-repeat #fff;
 }
