--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,4 +1,4 @@
-<div>
+<div id="center" style="color: white">
   <div class="row"><h1>{{ title }}</h1></div>
   <div class="row"><h4>{{ error }}</h3></div>
 </div>
