--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,3 @@
 <div id="center">
-    <iframe src="https://scarmazzij.esri.com/portal/apps/insights/index.html#/embed/04a32df3415d468399df7c54bc4e997e" width="1580" height="840" frameborder="0"></iframe>
-    <h5><a href="/news">&#0149;&#0149;&#0149;</a></h5>
+    <a href="/twitter/login"><img src="/images/twitter.png"></a>
 </div>
