--- a/views/news.hbs
+++ b/views/news.hbs
@@ -31,10 +31,10 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/">Insights for ArcGIS</a>
+                <a class="nav-link" onclick="export_shapefile()" href="#">Export Shapefile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" onclick="export_shapefile()" href="#">Export Shapefile</a>
+                <span class="nav-link">{{user}}</span>
             </li>
         </ul>
     </div>
@@ -84,5 +84,5 @@
                 </div>
             </div>
         </div>
-    </div>  
+    </div> 
 </div>
